@@ -1,3 +1,7 @@
+Sun Feb 15 20:05:05 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* configure.in, src/gnome-genius.c: small cleanup
+
 Sun Feb 15 19:50:15 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: fix tlen default (to be 5 not 0.1), tinc default is
